# hackathon

./: schema.md  simulated_event_data_and_rules.xlsx
hackathon/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hackathon/.cursor/: ARCHITECTURE.md  PRD-AI-Deployment-Chart.md  STACK.md
hackathon/.cursor/rules/: 00-project-overview.mdc  10-ai-forecaster.mdc  20-deployment-chart-app.mdc  30-coding-conventions.mdc
hackathon/examples/: ai_deployment_chart_userflow.html  api_client_walkthrough.py  crew_availability_overrides.xlsx  employees.xlsx  events_calendar.xlsx  forecast_events_example.py  generate_full_mock_dataset.py  generate_store_employee_data.py  optimize_shifts_example.py  orders_history.xlsx  past_deployments.xlsx  promos.xlsx  simulated_event_table_2026_20stores_final_unique_with_rushhour_weather_weekends.xlsx  stations.xlsx  stores.xlsx  tasks.xlsx  test_api_flow.sh  weather_forecast.xlsx  ~$simulated_event_data_and_rules.xlsx
hackathon/frontend/: index.html  package-lock.json  package.json  vercel.json
hackathon/frontend/src/: App.tsx  index.css
hackathon/frontend/src/app/: ColorModeContext.tsx  store.ts  theme.ts
hackathon/frontend/src/components/: AppLayout.tsx  EmptyState.tsx  (+3 more)
hackathon/src/ai_forecaster/: __init__.py  cli.py  data_loader.py  event_pipeline.py  forecaster.py  model.py  scheduler.py  scheduling_pipeline.py  visualization.py
hackathon/tests/: test_api.py  test_data_loader.py  test_event_pipeline.py  test_forecaster.py  test_mock_dataset.py  test_scheduler.py
(+56 files in other folders)
